unpackaged/main/default/objects/FSL__Polygon__c/FSL__Polygon__c.object-meta.xml
<CustomObject>
    <label>Map Polygon</label>
    <nameField>
        <label>Polygon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Polygons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>