unpackaged/main/default/objects/FSL__Polygon__c/fields/FSL__Ma_La__c.field-meta.xml
<CustomField>
    <fullName>FSL__Ma_La__c</fullName>
    <label>Maximum Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>