unpackaged/main/default/objects/FSL__Polygon__c/fields/FSL__Mi_Lo__c.field-meta.xml
<CustomField>
    <fullName>FSL__Mi_Lo__c</fullName>
    <label>Minimum Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>