unpackaged/main/default/objects/FSL__Polygon__c/validationRules/FSL__Polygon_Color_HEX_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Polygon_Color_HEX_Format</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(FSL__Color__c)) &amp;&amp; (NOT(REGEX(FSL__Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
    <errorDisplayField>FSL__Color__c</errorDisplayField>
    <errorMessage>Polygon color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
</ValidationRule>